fix for broken npc portrait alignment on mobile

--- a/app/styles/speach-portraits.css
+++ b/app/styles/speach-portraits.css
@@ -50,7 +50,7 @@
   height: 100%;
   display: none;
   top: 0rem;
-  left: -5rem;
+  left: -1rem;
   position: absolute;
   font-size: 0.8rem;
   color: white;
@@ -66,6 +66,7 @@
   border-radius: 5px;
   z-index: 3;
   float: right;
+  position: relative;
 }
 
 .npc-face {
